@@ -24,6 +24,7 @@
 * Introduced the MINMEM Scene texture image maps resize policy
 * Updated to Intel OIDN v1.4.0
 * Added the support for Intel OIDN auxiliary buffers pre-filtering
+* Added the support for new pyluxcoretools MakeTX
 
 ### Fixed Bugs
 
